--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev:server": "ts-node-dev --inspect --ignore-watch node_modules src/server.ts"
+    "build": "tsc",
+    "dev:server": "ts-node-dev --inspect --ignore-watch node_modules src/server.ts",
+    "start": "node dist/server.js"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.7",
+    "@types/cors": "^2.8.8",
     "@types/express": "^4.17.5",
     "@types/mongodb": "^3.5.31",
     "@types/supertest": "^2.0.8",
@@ -29,6 +31,7 @@
     "express": "^4.17.1",
     "mongodb": "^3.6.2",
     "reflect-metadata": "^0.1.13",
+    "ts-node": "^9.0.0",
     "typeorm": "^0.2.28"
   }
 }
