--- a/package.json
+++ b/package.json
@@ -27,9 +27,12 @@
     "typescript": "^3.8.3"
   },
   "dependencies": {
+    "@types/faker": "^5.1.3",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "faker": "^5.1.0",
+    "faker-br": "^0.3.0",
     "mongodb": "^3.6.2",
     "reflect-metadata": "^0.1.13",
     "ts-node": "^9.0.0",
