--- a/package.json
+++ b/package.json
@@ -5,14 +5,17 @@
   "license": "MIT",
   "scripts": {
     "build": "tsc",
+    "seeds": "ts-node src/seeds/index.ts",
     "dev:server": "ts-node-dev --inspect --ignore-watch node_modules src/server.ts",
     "start": "node dist/server.js"
   },
   "devDependencies": {
     "@types/cors": "^2.8.8",
     "@types/express": "^4.17.5",
+    "@types/faker": "^5.1.4",
     "@types/mongodb": "^3.5.31",
     "@types/supertest": "^2.0.8",
+    "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^2.27.0",
     "@typescript-eslint/parser": "^2.27.0",
     "eslint": "^6.8.0",
@@ -29,9 +32,12 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "faker": "^5.1.0",
+    "faker-br": "^0.3.0",
     "mongodb": "^3.6.2",
     "reflect-metadata": "^0.1.13",
     "ts-node": "^9.0.0",
-    "typeorm": "^0.2.28"
+    "typeorm": "^0.2.28",
+    "uuid": "^8.3.1"
   }
 }
