--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "dependencies": {
     "@types/faker": "^5.1.3",
+    "@types/yup": "^0.29.9",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
@@ -39,6 +40,7 @@
     "reflect-metadata": "^0.1.13",
     "ts-node": "^9.0.0",
     "typeorm": "^0.2.28",
-    "uuid": "^8.3.1"
+    "uuid": "^8.3.1",
+    "yup": "^0.29.3"
   }
 }
