--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/mongodb": "^3.5.31",
     "@types/supertest": "^2.0.8",
     "@types/uuid": "^8.3.0",
+    "@types/yup": "^0.29.9",
     "@typescript-eslint/eslint-plugin": "^2.27.0",
     "@typescript-eslint/parser": "^2.27.0",
     "eslint": "^6.8.0",
@@ -40,6 +41,7 @@
     "reflect-metadata": "^0.1.13",
     "ts-node": "^9.0.0",
     "typeorm": "^0.2.28",
-    "uuid": "^8.3.1"
+    "uuid": "^8.3.1",
+    "yup": "^0.29.3"
   }
 }
