--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -30,7 +30,16 @@
         "ts": "never"
       }
     ],
-    "no-console": "off"
+    "no-console": "off",
+    "no-underscore-dangle": [
+      "error",
+      {"allow": ["_id"]}
+    ],
+    "@typescript-eslint/camelcase": [
+      "error",
+      {"allow": ["created_at", "updated_at"]}
+
+    ]
   },
   "settings": {
     "import/resolver": {
