--- a/package.json
+++ b/package.json
@@ -38,10 +38,10 @@
     "faker": "^5.1.0",
     "faker-br": "^0.3.0",
     "jsonwebtoken": "^8.5.1",
-    "mongodb": "^3.6.2",
+    "mongodb": "3.6.2",
     "reflect-metadata": "^0.1.13",
     "ts-node": "^9.0.0",
-    "typeorm": "^0.2.28",
+    "typeorm": "0.2.28",
     "uuid": "^8.3.1",
     "yup": "^0.29.3"
   }
