--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "build": "tsc",
     "seeds": "ts-node src/seeds/index.ts",
     "dev:server": "ts-node-dev --inspect --ignore-watch node_modules src/server.ts",
-    "start": "node dist/server.js"
+    "start": "node dist/server.js",
+    "test": "jest"
   },
   "devDependencies": {
     "@types/cors": "^2.8.8",
     "@types/express": "^4.17.5",
     "@types/faker": "^5.1.4",
+    "@types/jest": "^26.0.15",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/mongodb": "^3.5.31",
     "@types/supertest": "^2.0.8",
@@ -26,6 +28,7 @@
     "eslint-import-resolver-typescript": "^2.0.0",
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-prettier": "^3.1.2",
+    "jest": "^26.6.3",
     "prettier": "^2.0.4",
     "ts-node-dev": "^1.0.0-pre.44",
     "typescript": "^3.8.3"
