--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint-plugin-prettier": "^3.1.2",
     "jest": "^26.6.3",
     "prettier": "^2.0.4",
+    "ts-jest": "^26.4.4",
     "ts-node-dev": "^1.0.0-pre.44",
     "typescript": "^3.8.3"
   },
