--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "tsc",
     "seeds": "ts-node src/seeds/index.ts",
-    "dev:server": "ts-node-dev --inspect --ignore-watch node_modules src/server.ts",
+    "dev:server": "ts-node-dev --ignore-watch node_modules src/server.ts",
     "start": "node dist/server.js",
     "test": "jest"
   },
