--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -1,10 +1,9 @@
-name: Node CI
+name: Test PROD Env
 
-on: [push]
+on: [pull_request]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     strategy:
@@ -17,5 +16,13 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - run: yarn install
-    - run: yarn test
+    - name: Installation
+      run: yarn install
+    - name: Build prod environment
+      run: yarn build
+    - name: Test prod environment
+      run: |
+        yarn test
+      env:
+        PROD: true
+
